# nnapprox

./: LICENSE  README.md  pyproject.toml
notebooks/: example_pytorch.ipynb
src/nnapprox/: __init__.py  architectures.py  function.py
