[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nnapprox"
version = "0.0.1"
authors = [
  { name="Johannes Zierenberg", email="johannes.zierenberg@gmail.com" },
]
description = "Package to train neural network as a general approximator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zierenberg/nnapprox"
Issues = "https://github.com/zierenberg/nnapprox/issues"
